--- a/public/css/app.css
+++ b/public/css/app.css
@@ -662,7 +662,7 @@ progress {
   }
 }
 .row {
-  --bs-gutter-x: 0rem;
+  --bs-gutter-x: 0;
   /* --bs-gutter-x: 1.5rem; */
   --bs-gutter-y: 0;
   display: flex;
